--- a/products/templates/myproducts.html
+++ b/products/templates/myproducts.html
@@ -1,5 +1,28 @@
 {% extends 'base.html' %}
 
 {% block content %}
-{% endblock %}
 
+
+<h1>my products</h1>
+<table class="table">
+  <thead class="thead-dark">
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">Product</th>
+      <th scope="col">Name</th>
+      <th scope="col">Price</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">1</th>
+      <td>{{ product.image_url }}</td>
+      <td>{{ product.name }}</td>
+      <td>${{ product.price }}</td>
+    </tr>
+  </tbody>
+</table>
+
+
+
+{% endblock %}
